[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.868
margin_top = -127.753
margin_right = 300.132
margin_bottom = -49.7532
custom_fonts/font = SubResource( 1 )
text = "Eugene's Creme"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 581.873
margin_top = 365.625
margin_right = 761.873
margin_bottom = 449.625
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
